force-app/main/default/objects/Social_Persona_Negative__c/Social_Persona_Negative__c.object-meta.xml
<CustomObject>
    <label>Social Persona Negative</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Social Persona Negative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Persona Negatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>