force-app/main/default/objects/Social_Persona_Negative__c/fields/Count_Defame__c.field-meta.xml
<CustomField>
    <fullName>Count_Defame__c</fullName>
    <label>Count Defame</label>
    <summaryForeignKey>Social_Post_Negative__c.Social_Persona_Negative__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>