force-app/main/default/objects/Social_Persona_Negative__c/fields/Real_Name__c.field-meta.xml
<CustomField>
    <fullName>Real_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Real Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>