force-app/main/default/objects/Social_Persona_Negative__c/fields/Social_Persona_ID__c.field-meta.xml
<CustomField>
    <fullName>Social_Persona_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Social Persona ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>